<resources>
    <string name="app_name">CloudShoppingList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="find_password">Forget Password</string>
    <string name="input_name">Please input account</string>
    <string name="input_password">Please input password</string>
    <string name="input_email">Please input email address</string>
    <string name="account_name">Account Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password</string>
    <string name="account_name_cannot_be_empty">Account Name cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="email_cannot_be_empty">Email address cannot be empty</string>
    <string name="invalid_account">Sorry,Cannot login in, please try it again</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="shop_list_name">Shopping List Name</string>
    <string name="save">Save</string>
    <string name="list_name_cannot_be_empty">Shopping List name cannot be empty</string>
    <string name="network_error">Network Issue,Please try it again</string>
    <string name="shop_list_item_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>

    <string name="photo">Photo</string>
    <string name="memo">Memo</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add a Photo</string>
    <string name="show_all_photos">Show All photos</string>
    <string name="delete">Delete</string>
    <string name="shop_list">Shopping List</string>
    <string name="shop_list_item">Shopping Items</string>
    <string name="photo_list">Photos</string>
    <string name="friends">Friends</string>
    <string name="friends_shop_list">Friend Shopping List</string>
    <string name="no_result_found">No Result Found, Please try it again</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_sent_for_reset">Reset password email has been sent, please check</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
</resources>
