<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/login_screen">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
         >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/black_color"
            android:textSize="20sp" />


    </RelativeLayout>

    <EditText
        android:id="@+id/psw_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_edit"
        android:layout_alignRight="@+id/name_edit"
        android:layout_below="@+id/name_edit"
        android:layout_marginTop="@dimen/jianju"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="@dimen/tou_weight_height6"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginRight="@dimen/jianju2"
        android:ems="10"
        android:hint="@string/input_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_edit"
        android:layout_alignBottom="@+id/name_edit"
        android:layout_alignParentLeft="true"
        android:text="@string/account_name"
        android:layout_marginLeft="@dimen/jianju2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/psw_edit"
        android:layout_alignBottom="@+id/psw_edit"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/psw_edit"
        android:layout_marginTop="@dimen/tab_height2"
        android:layout_below="@+id/psw_edit" >

        <Button
            android:id="@+id/regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/jianju"
            android:text="@string/register" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/jianju"
            android:text="@string/sign_in" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/jianju2"
        android:text="@string/forget_password" />
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />
</RelativeLayout>